--- a/mn_juego/templates/componentes/buscador_comunas.html
+++ b/mn_juego/templates/componentes/buscador_comunas.html
@@ -8,10 +8,9 @@
     function onSelectItem_{{input_id}}(item) {
 
       let slug = item.value;
-      $(location).attr('href', '{{pre_fix}}/'+slug)
+      $(location).attr('href', '/{{pre_fix}}/'+slug)
     }
     function onClick_{{input_id}}(event){
-        console.log("perrito");
         console.log(event);
         event.preventDefault();
     };
