--- a/mn_juego/templates/base.html
+++ b/mn_juego/templates/base.html
@@ -47,6 +47,15 @@
     {% block extrajs %} {% endblock extrajs %} {# Aquí puedes encontrar el footer #} {% include 'componentes/footer.html' %}
 </body>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZN22999RB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3ZN22999RB');
+</script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 
