--- a/mn_juego/templates/resultado.html
+++ b/mn_juego/templates/resultado.html
@@ -21,7 +21,7 @@
             <p>Porque en este proceso constituyente <b>#ParticipamosTodxs</b>, les pedimos a las candidaturas que adhieran a los siguientes compromisos, para impulsar una participación ciudadana inclusiva durante el trabajo de la Convención Constitucional.</p>
             <div class="compromiso pink">
                 <h3>Compromiso por la inclusión de grupos con mayor vulneración de derechos.</h3>
-                <p>Trabajados desde Manual <a href="https://drive.google.com/file/d/1draruC0R7CZJLc6CWE0DZ_mcRul9As36/view" target="_blank">“Miradas para la inclusión”</a>.</p>
+                <p>Trabajados desde Manual <a href="http://library.fes.de/pdf-files/bueros/chile/17716.pdf" target="_blank">“Miradas para la inclusión”</a>.</p>
                 <a class="boton-antp" href="{{distrito.link_compromiso_inclusion}}" target="_blank">Revisa el compromiso</a>
             </div>
             <div class="compromiso blue">
