--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -15,8 +15,8 @@
     <h2 class="titulo-portada">
         <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
     <div class="boton-acla">
-
-        <a data-scroll href="#busqueda-candidatos"><p>Conocelas Aquí</p></a>
+        <p>Conocelas Aquí</p>
+        <a data-scroll href="#busqueda-candidatos"><img src="{% static 'imagenes/icono-arrow.svg' %}" alt="icono scroll"></a>
     </div>
 </div>
 
