--- a/mn_juego/templates/componentes/candidato_card.html
+++ b/mn_juego/templates/componentes/candidato_card.html
@@ -11,13 +11,13 @@
             {% get_compromiso_participacion candidatura as compromiso_participacion %}
             {% if compromiso_participacion %}
             <p class="pink">
-              <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella rosa">
+              <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella rosa">
             </p>
             {% endif %}
             {% get_compromiso_gep candidatura as compromiso_gep %}
             {% if compromiso_gep %}
             <p class="blue">
-              <img src="{% static 'imagenes/estrella-azul.svg' %}" alt="estrella azul">
+              <img src="{% static 'imagenes/estrella-rosa.svg' %}" alt="estrella azul">
             </p>
             {% endif %}
         </div>
