--- a/mn_juego/templates/componentes/header.html
+++ b/mn_juego/templates/componentes/header.html
@@ -8,7 +8,7 @@
 <header>
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container-fluid hello-bar">
+        <div class="mensaje-header">
             <div class="container">
                 <div class="mensaje">
                     <p>Si eres candidato/a a la Convención Constitucional, te invitamos a sumarte #ParticipamosTodxs y firmar nuestros compromisos por la participación e inclusión.</p>
