--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -1,22 +1,18 @@
-{% extends 'base.html' %}
-{% load static %}
-{% load medianaranja_extras %}
-{% block extrajstop %}
+{% extends 'base.html' %} {% load static %} {% load medianaranja_extras %} {% block extrajstop %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous">
-</script>
-{% endblock extrajstop %}
-{% block preContent %}
-<!-- {% include 'componentes/carousel.html' %} -->
-{% endblock preContent %}
 
-{% block content %}
+
+</script>
+{% endblock extrajstop %} {% block preContent %}
+<!-- {% include 'componentes/carousel.html' %} -->
+{% endblock preContent %} {% block content %}
 
 <div class="portada">
     <h2 class="titulo-portada">
         <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
     <div class="boton-acla">
         <p>Conocelas Aquí</p>
-        <a data-scroll href="#busqueda-candidatos">V</a>
+        <a data-scroll href="#busqueda-candidatos"><img src="../static/imagenes/icono-arrow-portada.png" alt="flecha" /></a>
     </div>
 </div>
 
@@ -30,31 +26,30 @@
             <h1>Participamos <span>Todxs</span></h1>
             <p class="bajada-titulo">Por un proceso constituyente donde todas las voces participen.</p> -->
 
-      <div class="col-9 offset-3 col-sm-9 offset-sm-3 col-md-10 offset-md-2 col-lg-5 offset-lg-3 col-xl-4 offset-xl-3 form-comunas">
-          <h1>Participamos <span>Todxs</span></h1>
-          <p class="bajada-titulo">Por un proceso constituyente donde todas las voces participen.</p>
+        <div class="col-9 offset-3 col-sm-9 offset-sm-3 col-md-10 offset-md-2 col-lg-5 offset-lg-3 col-xl-4 offset-xl-3 form-comunas">
+            <h1>Participamos <span>Todxs</span></h1>
+            <p class="bajada-titulo">Por un proceso constituyente donde todas las voces participen.</p>
 
-          <p>Encuentra las <b>candidaturas comprometidas</b> por una participación ciudadana inclusiva.</p>
+            <p>Encuentra las <b>candidaturas comprometidas</b> por una participación ciudadana inclusiva.</p>
 
-          <div id="parent" class="form-group">
-               <label for="myAutocomplete">Escribe <b>la comuna</b> en que votas:</label>
+            <div id="parent" class="form-group">
+                <label for="myAutocomplete">Escribe <b>la comuna</b> en que votas:</label>
 
-               <img src="{% static 'imagenes/map-icono.svg' %}" alt="mapa-icono" class="icono-mapa">
-              {% buscador_comunas input_id='myAutocomplete' pre_fix="comuna" placeholder='Escribe tu comuna' %}
+                <img src="{% static 'imagenes/map-icono.svg' %}" alt="mapa-icono" class="icono-mapa"> {% buscador_comunas input_id='myAutocomplete' pre_fix="comuna" placeholder='Escribe tu comuna' %}
 
             </div>
 
-      </div>
+        </div>
 
-      <div class="personas">
-          <img src="{% static 'imagenes/fondo-personas-congregadas.png' %}" alt="personas" class="personas-organizacion">
-      </div>
+        <div class="personas">
+            <img src="{% static 'imagenes/fondo-personas-congregadas.png' %}" alt="personas" class="personas-organizacion">
+        </div>
 
-      <div class="mancha">
-          <img src="{% static 'imagenes/mancha-busqueda-comuna.svg' %}" alt="mancha" class="mancha">
-      </div>
-   </div>
- </div>
+        <div class="mancha">
+            <img src="{% static 'imagenes/mancha-busqueda-comuna.svg' %}" alt="mancha" class="mancha">
+        </div>
+    </div>
+</div>
 
 <div class="textura-post-busqueda-comuna">
     <img src="{% static 'imagenes/textura-post-comunas.svg' %}" alt="textura">
@@ -74,8 +69,7 @@
         <div class="col-12 col-sm-12 col-md-5 offset-md-5 col-lg-4 offset-lg-5 col-xl-4 offset-xl-5 form-comunas">
             <h2> Conoce cuáles son las candidaturas de <span>pueblos originarios</span> para la Convención</h2>
             <div id="parent" class="form-group">
-                <label for="buscador_pueblos_originarios">Escribe el nombre del <b>Pueblo Originario</b> para consultar:</label>
-                {% buscador_pueblos_originarios input_id='buscador_pueblos_originarios' pre_fix="pueblos_originarios" placeholder='Escribe el pueblo originario' %}
+                <label for="buscador_pueblos_originarios">Escribe el nombre del <b>Pueblo Originario</b> para consultar:</label> {% buscador_pueblos_originarios input_id='buscador_pueblos_originarios' pre_fix="pueblos_originarios" placeholder='Escribe el pueblo originario' %}
             </div>
         </div>
     </div>
