--- a/mn_juego/templates/componentes/header.html
+++ b/mn_juego/templates/componentes/header.html
@@ -7,10 +7,10 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="nav-form container my-2">
-            <a class="navbar-brand" href="/"><img src="{% static 'imagenes/logo-antp.png' %}" alt="My image"></a>
+            <a class="navbar-brand" href="/"><img src="{% static 'imagenes/logo-antp.png' %}" alt="AhoraNosTocaParticipar"></a>
             <ul class="navbar-nav">
               <div id="parent" class="form-group">
-                  {% buscador_comunas input_id='header_comunas' pre_fix="comuna" placeholder='Escribe tu comuna' %}
+                  {% buscador_comunas input_id='header_comunas' pre_fix="/comuna" placeholder='Escribe tu comuna' %}
               </div>
                 <li class="nav-item">
                     <a class="nav-link" href="https://ahoranostocaparticipar.cl/users/sign_up">Registrate</a>
