Tratando de arreglar el embed

--- a/mn_juego/templates/base.html
+++ b/mn_juego/templates/base.html
@@ -34,6 +34,7 @@
 
 
     {% block extrajstop %} {% endblock extrajstop %}
+    <link rel="icon" type="image/png" href="https://ahoranostocaparticipar.cl/uploads/decidim/organization/favicon/1/medium_faviconico.png">
     <title>Participamos Todos</title>
 </head>
 
