--- a/mn_juego/templates/embed.html
+++ b/mn_juego/templates/embed.html
@@ -8,7 +8,7 @@
             <h1>Participamos <span>Todxs</span></h1>
             <div id="parent" class="form-group">
                 <label for="myAutocomplete">Escribe <b>la comuna</b> en que votas:</label>
-                {% buscador_comunas input_id='myAutocomplete' pre_fix="https://participamostodxs.ahoranostocaparticipar.cl/comuna" placeholder='Escribe tu comuna' full_path=True %}
+                {% buscador_comunas input_id='myAutocomplete' pre_fix="/comuna" placeholder='Escribe tu comuna' full_path=True %}
             </div>
         </div>
     </div>
