--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -16,7 +16,7 @@
         <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
     <div class="boton-acla">
         <p>Conocelas Aquí</p>
-        <a data-scroll href="#busqueda-candidatos">V</a>
+        <a data-scroll href="#busqueda-candidatos"><img src="{% static 'imagenes/icono-arrow.svg' %}" alt="icono scroll"></a>
     </div>
 </div>
 
