--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -4,7 +4,7 @@
         <div class="row alinear">
 
             <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 logo">
-                <img src="{% static 'imagenes/logo-antp.png' %}" alt="personas" class="pueblo-originario">
+                <img src="{% static 'imagenes/logoANTP.svg' %}" alt="personas" class="pueblo-originario">
             </div>
 
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
