se incorporan en carpeta de imagenes los simbolos de los pueblos originarios y se añade abajo del listado de candidatos por comuna, un mensaje para que se adhieran a los compromisos aquellos que no estan adheridos

--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -36,7 +36,20 @@
 </div>
 
 
+<section class="container-fluid mensaje-adhesion">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <h3><b>¿No encontraste a tu <span>candidato o candidata</span>?</b></h3>
+                <p>Entonces pídeles que se comprometan por el derecho a la participación ciudadana inclusiva</p>
+                <div class="boton">
+                    <a class="boton-antp" href="https://ahoranostocaparticipar.cl/processes/espaciocompromisos" target="_blank">Conoce los compromisos</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
+</section>
 
 
 
