--- a/mn_juego/static/style.css
+++ b/mn_juego/static/style.css
@@ -2048,11 +2048,6 @@ section.container.compromisos {
 }
 
 
-.busqueda-comuna .form-comunas:before {
-    top: -50%;
-}
-
-
 header nav .nav-form img {
     width: 150px;
 }
@@ -2100,4 +2095,67 @@ section.candidatos {
 .mensaje-compromisos-candidatos .boton {
     margin-bottom: 20px;
     margin-top: 10px;
+}
+
+.busqueda-comuna .form-comunas {
+    padding-bottom: 250px !important;
+}
+
+
+.mensaje-adhesion {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background: url(imagenes/bg-blue-granillo.jpg);
+    background-size: cover;
+}
+
+.mensaje-adhesion h3 {
+    text-align: center;
+    color: white;
+    font-size: 2.5em;
+    padding-bottom: 0px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.mensaje-adhesion h3 span {
+    color: #FFEB26;
+}
+
+.mensaje-adhesion p {
+    color: white;
+    font-size: 1.2em;
+    padding-bottom: 0px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+
+section.container-fluid.mensaje-adhesion .boton {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+
+section.container-fluid.mensaje-adhesion .boton a:hover {
+    background: #FF297A !important;
+}
+
+@media (max-width:700px) {
+    .mensaje-adhesion {
+        padding-top: 100px;
+        padding-bottom: 100px;
+        background: url(imagenes/bg-blue-granillo.jpg);
+        background-size: cover;
+    }
+}
+
+@media (max-width:500px) {
+    .busqueda-comuna .form-comunas {
+        padding-bottom: 200px !important;
+    }
+
 }
