--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -65,6 +65,12 @@
                 <h2>Comunas que pertenecen al <span>{{distrito}}</span></h2>
             </div>
 
+            <div class="col-12 col-sm-12 col-md-5 col-lg-6 col-xl-6 comuna-activa">
+                <h3>
+                    {{comuna}}
+                </h3>
+            </div>
+
             <div class="col-12 col-sm-12 col-md-7 col-lg-6 col-xl-6 comunas">
                 <div class="comunas-distrito-list">
                     <ul>
