cambio texto botón adhiere

--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -7,7 +7,7 @@
                 <div class="mensaje-compromisos-candidatos">
                     <p>Si eres candidato/a a la Convención Constitucional, te invitamos a sumarte <b>#ParticipamosTodxs</b> y firmar nuestros compromisos por la participación e inclusión.</p>
                     <div class="boton">
-                        <a class="boton-antp" href="https://ahoranostocaparticipar.cl/processes/espaciocompromisos" target="_blank">Conoce los compromisos</a>
+                        <a class="boton-antp" href="https://ahoranostocaparticipar.cl/processes/espaciocompromisos" target="_blank">Adhiere los compromisos</a>
                     </div>
                 </div>
             </div>
