--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -7,7 +7,7 @@
                 <div class="mensaje-compromisos-candidatos">
                     <p>Si eres candidato/a a la Convención Constitucional, te invitamos a sumarte <b>#ParticipamosTodxs</b> y firmar nuestros compromisos por la participación e inclusión.</p>
                     <div class="boton">
-                        <a class="boton-antp" href="https://ahoranostocaparticipar.cl/processes/espaciocompromisos" target="_blank">Adhiere los compromisos</a>
+                        <a class="boton-antp" href="https://docs.google.com/forms/d/e/1FAIpQLSd6LFc5dRF8F6CIVSuMdI25vGaSG1LVpGr1YXezIDuXatokhw/viewform" target="_blank">Adhiere los compromisos</a>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
 
 <script>
     function tweetCoso() {
-    var message = "Atención candidatas/os a la Convención ¡Les estamos buscando! ¿Ya se comprometieron con el derecho a la participación inclusiva? 🧐 ¡Súmate porque en esta Convención #ParticipamosTodxs! Por una #ConvenciónAbierta @ahrnostoca @RParticipacion| 😉👇 https://bit.ly/2OIBrLn";
+    var message = "Atención candidatas/os a la Convención ¡Les estamos buscando! ¿Ya se comprometieron con el derecho a la participación inclusiva? 🧐 ¡Súmate porque en esta Convención #ParticipamosTodxs! Por una #ConvenciónAbierta @ahrnostoca @RParticipacion| 😉👇 https://docs.google.com/forms/d/e/1FAIpQLSd6LFc5dRF8F6CIVSuMdI25vGaSG1LVpGr1YXezIDuXatokhw/viewform";
     window.open('https://twitter.com/intent/tweet?text=' + encodeURIComponent(message), 'Tweet');
     }
 </script>
