--- a/mn_juego/templates/resultado_pueblos_originarios.html
+++ b/mn_juego/templates/resultado_pueblos_originarios.html
@@ -21,12 +21,12 @@
             <div class="compromiso pink">
                 <h3>Compromiso por la inclusión de grupos con mayor vulneración de derechos.</h3>
                 <p>Trabajados desde Manual <a href="https://drive.google.com/file/d/1draruC0R7CZJLc6CWE0DZ_mcRul9As36/view" target="_blank">“Miradas para la inclusión”</a>.</p>
-                <a class="boton-antp" href="https://drive.google.com/file/d/1VryC-gYx0q00pHqRgSUwJv_pf0cy-teW/view" target="_blank">Revisa el compromiso</a>
+                <a class="boton-antp" href="{{distrito.link_compromiso_inclusion}}" target="_blank">Revisa el compromiso</a>
             </div>
             <div class="compromiso blue">
                 <h3>Compromiso por la participación en el proceso constituyente.</h3>
                 <p>Impulsado desde <a href="https://www.redparalaparticipacion.cl/" target="_blank">la Red para la Participación.</a></p>
-                <a class="boton-antp" href="https://drive.google.com/file/d/1tqaSC44PvhniTe7GDv7Sg-SmXwhaFzIj/view" target="_blank">Revisa el compromiso</a>
+                <a class="boton-antp" href="{{distrito.link_compromiso_participacion}}" target="_blank">Revisa el compromiso</a>
             </div>
         </div>
 
