--- a/mn_juego/templates/pueblos_originarios_candidatos_con_porcentajes.html
+++ b/mn_juego/templates/pueblos_originarios_candidatos_con_porcentajes.html
@@ -7,7 +7,7 @@
                 <div class="mensaje-compromisos-candidatos">
                     <p>Si eres candidato/a a la Convención Constitucional, te invitamos a sumarte <b>#ParticipamosTodxs</b> y firmar nuestros compromisos por la participación e inclusión.</p>
                     <div class="boton">
-                        <a class="boton-antp" href="https://docs.google.com/forms/d/e/1FAIpQLSd6LFc5dRF8F6CIVSuMdI25vGaSG1LVpGr1YXezIDuXatokhw/viewform" target="_blank">Conoce los compromisos</a>
+                        <a class="boton-antp" href="https://docs.google.com/forms/d/e/1FAIpQLSd6LFc5dRF8F6CIVSuMdI25vGaSG1LVpGr1YXezIDuXatokhw/viewform" target="_blank">Adhiere a los compromisos</a>
                     </div>
                 </div>
             </div>
