Arreglando el buscador de arriba

--- a/mn_juego/templates/componentes/header.html
+++ b/mn_juego/templates/componentes/header.html
@@ -23,7 +23,7 @@
             <a class="navbar-brand" href="/"><img src="{% static 'imagenes/logoANTP.svg' %}" alt="My image"></a>
             <ul class="navbar-nav">
                 <div id="parent" class="form-group">
-                    {% buscador_comunas input_id='header_comunas' pre_fix="comuna" placeholder='Escribe tu comuna' %}
+                    {% buscador_comunas input_id='header_comunas' pre_fix="/comuna" placeholder='Escribe tu comuna' %}
                 </div>
                 <li class="nav-item">
                     <a class="nav-link" href="https://ahoranostocaparticipar.cl/users/sign_up">Registrate</a>
