--- a/mn_juego/templates/resultado.html
+++ b/mn_juego/templates/resultado.html
@@ -6,7 +6,7 @@
    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53174.04800860228!2d-70.59680875596365!3d-33.595495467408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d652752a03c3%3A0x8f5de46ed2a22e92!2sPuente%20Alto%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1617581462137!5m2!1ses!2scl" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
     <div class="info">
         <h1 class="distrito">{% if comuna %}{{comuna}}, {% endif %}{{distrito}}</h1>
-        <p class="region">{{distrito.region}}</p>
+        <p class="region">{{distrito.region_territory}}</p>
     </div>
 </div>
 
@@ -31,19 +31,20 @@
             </div>
         </div>
 
-        <!--div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 datos-porcentajes">
-            <div class="item-porcentaje">
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 datos-porcentajes">
+            <!--div class="item-porcentaje">
                 <h4>Participación electoral de la comuna en el<span>Plebiscito 25-O</span></h4>
                 <p class="porcentaje">42.78%</p>
             </div>
             <<div class="item-porcentaje">
                 <h4>Participación <span>Nivel Comunal</span> en la última elección</h4>
                 <p class="porcentaje">42.78%</p>
-            </div>>
+            </div-->
             <div class="item-porcentaje boton-locales-votacion">
-                <a class="boton-antp" href="#"><img src="../static/imagenes/map-icono-white.svg" alt="mapa-icono" class="icono-mapa" width="25px;">Busca tu local de votación</a>
+                <a class="boton-antp" href="{{distrito.region_territory.link_geo_referencia}}" target="_blank">
+                    <img src="{% static 'imagenes/map-icono-white.svg' %}" alt="mapa-icono" class="icono-mapa" width="25px;">Busca tu local de votación</a>
             </div>
-        </div-->
+        </div>
     </div>
 </section>
 
