--- a/mn_juego/templates/section_pueblos.html
+++ b/mn_juego/templates/section_pueblos.html
@@ -1,6 +1,6 @@
 <section class="candidatos-pueblos-contenedor container-fluid">
     <div class="container">
-        {% for pueblo_originario in distrito.region.pueblos_originarios.all %}
+        {% for pueblo_originario in distrito.region_territory.pueblos_originarios.all %}
         <div class="row justify-content-md-center">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <h2>Estas son las candidaturas del Pueblo <br><span>{{pueblo_originario}}</span> en las elecciones de Convención Constituyente</h2>
