cambios en botones de resultado busqueda comuna, se añade boton para descargar documento de informacion oportuna y se ajustan los estilos de esos botones

--- a/mn_juego/static/style.css
+++ b/mn_juego/static/style.css
@@ -2234,3 +2234,22 @@ section.container-fluid.mensaje-adhesion .boton a:hover {
     }
 
 }
+
+
+.datos-porcentajes .item-porcentaje {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 40px 20px;
+    margin-left: 0%;
+    border-radius: 20px;
+}
+
+
+.datos-porcentajes a.boton-antp {
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
