--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -10,7 +10,8 @@
 
 <div class="portada">
     <h2 class="titulo-portada">
-        <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
+        <!--<span>Participamos todos</span><br>-->
+        ¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
     <div class="boton-acla">
         <p>Conocelas Aquí</p>
         <a data-scroll href="#busqueda-candidatos"><img src="{% static 'imagenes/icono-arrow.svg' %}" alt="icono scroll"></a>
@@ -78,6 +79,28 @@
         <img src="{% static 'imagenes/mancha-prev-footer.svg' %}" alt="personas" class="pueblo-originario">
     </div>
 </div>
+
+
+<div class="textura-prev-pueblos">
+    <img src="{% static 'imagenes/textura-decoracion-postbanner.svg' %}" alt="textura">
+</div>
+
+
+<section class="container-fluid mensaje-adhesion">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <h3><b>Contenidos Destacados</b></h3>
+                <p>Entonces pídeles que se comprometan por el derecho a la participación ciudadana inclusiva</p>
+                <div class="boton">
+                    <a class="boton-antp" href="#" onclick="tweetCoso();return false;" target="_blank">Invita a tu candidato o candidata</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
 
 
 {% endblock content %}
